--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.9",
+    "eslint": "^9.38.0",
+    "eslint-config-next": "^16.0.0",
     "lucide-react": "^0.259.0",
     "moment-timezone": "^0.5.43",
-    "next": "13.4.9",
+    "next": "^16.0.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.25",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-intersection-observer": "^9.5.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
