--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.4.2",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
@@ -22,11 +22,11 @@
     "eslint-config-next": "^16.0.0",
     "lucide-react": "^0.259.0",
     "moment-timezone": "^0.5.43",
-    "next": "^16.0.0",
+    "next": "14.0.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.25",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-intersection-observer": "^9.5.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
