--- a/package.json
+++ b/package.json
@@ -35,5 +35,14 @@
   "devDependencies": {
     "eslint": "^9.38.0",
     "eslint-config-next": "16.0.0"
-  }
+  },
+  "browserslist": [
+    "last 2 Chrome versions",
+    "last 2 Firefox versions",
+    "last 2 Edge versions",
+    "last 2 Safari versions",
+    ">0.5%",
+    "not dead",
+    "not ie <= 11"
+  ]
 }
