--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "fast-xml-parser": "^4.4.0",
     "lucide-react": "^0.259.0",
     "moment-timezone": "^0.5.43",
     "next": "^16.0.0",
