--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "fast-xml-parser": "^4.4.0",
     "lucide-react": "^0.259.0",
     "moment-timezone": "^0.5.43",
-    "next": "^16.0.0",
+    "next": "^16.0.10",
     "next-themes": "^0.2.1",
     "node-vibrant": "^4.0.3",
     "postcss": "8.4.25",
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "eslint": "^9.38.0",
-    "eslint-config-next": "16.0.0"
+    "eslint-config-next": "^16.0.10"
   },
   "browserslist": [
     "last 2 Chrome versions",
